# shaunwhite

./: .gitignore  .hlint.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  cabal.project.freeze  deploy.sh  docker-compose.yml  package.yaml  shaunwhite.cabal  stack.yaml
app/: Main.hs
calamity-0.1.30.4/Calamity/HTTP/Internal/: Ratelimit.hs  Request.hs  Types.hs
lib/: Args.hs  Auth.hs  Config.hs  CustomPrelude.hs  Env.hs  Rolerequest.hs  Shaunwhite.hs  Utils.hs
lib/Shaun/: Auth.hs  Bot.hs  Commands.hs  Env.hs
lib/Shaun/Calls/: Echo.hs  Help.hs  RoleRequest.hs
lib/Utils/: Config.hs
src/: Args.hs  Auth.hs  Bot.hs  Commands.hs  Config.hs  CustomPrelude.hs  Env.hs  Main.hs  Rolerequest.hs  Roles.hs  Shaunwhite.hs  Welcome.hs
src/Calls/: Echo.hs  Help.hs  RoleRequest.hs
test/: Placeholder.hs
