cabal-version: 3.0

name:           shaunwhite
version:        0.1.0.0
homepage:       https://github.com/typesafety/shaunwhite#readme
bug-reports:    https://github.com/typesafety/shaunwhite/issues
author:         Thomas Li
maintainer:     guslithd@student.gu.se
copyright:      2022 Thomas Li
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/typesafety/shaunwhite

--
-- Common stanzas
--

common common-extensions
  default-extensions:
    -- Use a custom prelude instead
    NoImplicitPrelude

    DataKinds
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

common common-warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints

common common-dependencies
  build-depends:
    -- ghc 8.10.*
    base ^>= 4.14,

    -- Base for the custom prelude
    relude ^>= 1.0,

    PyF,
    aeson,
    base,
    calamity,
    calamity-commands,
    containers,
    data-flags,
    di,
    di-polysemy,
    directory,
    filepath,
    lens,
    parseargs,
    polysemy,
    polysemy-plugin,
    pretty-simple,
    text,
    unboxing-vector

--
-- Targets
--

library shaunwhite-lib
  import:
    common-dependencies,
    common-extensions,
    common-warnings
  exposed-modules:
    Args
    Auth
    Config
    CustomPrelude
    Env
    Roles
    Shaunwhite
  ghc-options:
    -fplugin=Polysemy.Plugin
  hs-source-dirs:
    src/
  default-language: Haskell2010

executable shaunwhite
  import:
    common-dependencies,
    common-extensions,
    common-warnings
  main-is: Main.hs
  hs-source-dirs:
    main/
  build-depends:
    shaunwhite-lib
  ghc-options:
    -O1
    -flate-specialise
    -fplugin=Polysemy.Plugin
    -fspecialise-aggressively
    -rtsopts
    -threaded
    -with-rtsopts=-N
  default-language: Haskell2010
